Fix PP height and text-align bugs

--- a/PeoplePickerClient/PeoplePickerWholeStyle.css
+++ b/PeoplePickerClient/PeoplePickerWholeStyle.css
@@ -48,7 +48,8 @@
 .ms-PeoplePicker .ms-PeoplePicker-persona {
   display: inline-block;
   float: left;
-  margin: 4px;
+  /*margin: 4px;*/
+  margin:0;
 }
 .ms-PeoplePicker .ms-PeoplePicker-persona .ms-Persona {
   background-color: #f4f4f4;
@@ -556,8 +557,9 @@
 }
 
 .office-peoplepicker-default {
-    top: 3px;
+    /**top: 3px;*/
     left: 4px;
+    text-align:center;
     position: absolute;
 }
 .office-peoplepicker-autofill-focus,
